# modio

./: Makefile.am  README.md  autogen.sh  configure.ac  modio.c  modio.h
regs/: Makefile.am  adele_cbi2801224a.cfg  adelsystem_cbi2801224a.cfg  adelsystems_cbi2801224a.cfg  moxa_iologik_e1200.cfg  moxa_iologik_e1212.cfg
src/: Makefile.am  modio.c  modio.h
